--- a/src/app/routes/common/supplier/supplier.component.html
+++ b/src/app/routes/common/supplier/supplier.component.html
@@ -50,142 +50,168 @@
         <tr>
 
           <td [nzChecked]="setOfCheckedId.has(data.id!)" (nzCheckedChange)="onItemChecked(data.id!, $event)"></td>
-          <td>
-            <!--
-  
-            <div class="editable-cell" *ngIf="editId !== data.id!|| editCol != 'name'; else editNameTpl">
-              <div class="editable-cell-value-wrap" (click)="startEdit(data.id!, 'name', $event)">
-                {{ data.name }}
-              </div>
-            </div>
-            <ng-template #editNameTpl>
-              <input type="text" nz-input [(ngModel)]="data.name" (blur)="changeSupplier(data)" />
-            </ng-template>
-  
-            -->
+          <td> 
             {{ data.name }}
           </td>
           <td  nzEllipsis>
-            <div class="editable-cell" *ngIf="editId !== data.id! || editCol != 'description'; else editDescTpl">
-              <div class="editable-cell-value-wrap" (click)="startEdit(data.id!, 'description', $event)">
-                <a>
-                  <span nz-tooltip nzTooltipTitle="{{ data.description }}">{{ (data.description != null && data.description != '')  ? data.description  : "----" }}</span>
-                  </a> 
+            @if (editId !== data.id! || editCol != 'description') {
+              
+              <div class="editable-cell" >
+                <div class="editable-cell-value-wrap" (click)="startEdit(data.id!, 'description', $event)">
+                  <a>
+                    <span nz-tooltip nzTooltipTitle="{{ data.description }}">{{ (data.description != null && data.description != '')  ? data.description  : "----" }}</span>
+                    </a> 
+                </div>
               </div>
-            </div>
-            <ng-template #editDescTpl>
+            }
+            @else {
+              
               <input type="text" nz-input [(ngModel)]="data.description" (blur)="changeSupplier(data)" />
-            </ng-template>
+            } 
           </td>
           <td>
-            <div class="editable-cell"
-              *ngIf="editId !== data.id! || editCol != 'contactorFirstname'; else editcontactorFirstnameTpl">
-              <div class="editable-cell-value-wrap" (click)="startEdit(data.id!, 'contactorFirstname', $event)">
-                {{ data.contactorFirstname }}
+            @if (editId !== data.id! || editCol != 'contactorFirstname') {
+              
+              <div class="editable-cell" >
+                <div class="editable-cell-value-wrap" (click)="startEdit(data.id!, 'contactorFirstname', $event)">
+                  {{ data.contactorFirstname }}
+                </div>
               </div>
-            </div>
-            <ng-template #editcontactorFirstnameTpl>
+            }
+            @else {
+              
               <input type="text" nz-input [(ngModel)]="data.contactorFirstname" (blur)="changeSupplier(data)" />
-            </ng-template>
+            } 
           </td>
           <td>
-            <div class="editable-cell"
-              *ngIf="editId !== data.id! || editCol != 'contactorLastname'; else editcontactorLastnameTpl">
-              <div class="editable-cell-value-wrap" (click)="startEdit(data.id!, 'contactorLastname', $event)">
-                {{ data.contactorLastname }}
+            @if (editId !== data.id! || editCol != 'contactorLastname') {
+              
+              <div class="editable-cell" >
+                <div class="editable-cell-value-wrap" (click)="startEdit(data.id!, 'contactorLastname', $event)">
+                  {{ data.contactorLastname }}
+                </div>
               </div>
-            </div>
-            <ng-template #editcontactorLastnameTpl>
+            }
+            @else {
+              
               <input type="text" nz-input [(ngModel)]="data.contactorLastname" (blur)="changeSupplier(data)" />
-            </ng-template>
+            } 
           </td>
           <td>
-            <div class="editable-cell"
-              *ngIf="editId !== data.id! || editCol != 'addressCountry'; else editAddressCountryTpl">
-              <div class="editable-cell-value-wrap" (click)="startEdit(data.id!, 'addressCountry', $event)">
-                {{ data.addressCountry }}
+            @if (editId !== data.id! || editCol != 'addressCountry') {
+              
+              <div class="editable-cell" >
+                <div class="editable-cell-value-wrap" (click)="startEdit(data.id!, 'addressCountry', $event)">
+                  {{ data.addressCountry }}
+                </div>
               </div>
-            </div>
-            <ng-template #editAddressCountryTpl>
+            }
+            @else {
+
               <input type="text" nz-input [(ngModel)]="data.addressCountry" (blur)="changeSupplier(data)" />
-            </ng-template>
+            } 
           </td>
           <td>
-            <div class="editable-cell" *ngIf="editId !== data.id! || editCol != 'addressState'; else editAddressStateTpl">
-              <div class="editable-cell-value-wrap" (click)="startEdit(data.id!, 'addressState', $event)">
-                {{ data.addressState }}
+            @if (editId !== data.id! || editCol != 'addressState') {
+              
+              <div class="editable-cell"  >
+                <div class="editable-cell-value-wrap" (click)="startEdit(data.id!, 'addressState', $event)">
+                  {{ data.addressState }}
+                </div>
               </div>
-            </div>
-            <ng-template #editAddressStateTpl>
+            }
+            @else {
               <input type="text" nz-input [(ngModel)]="data.addressState" (blur)="changeSupplier(data)" />
-            </ng-template>
+
+            } 
           </td>
           <td>
-            <div class="editable-cell"
-              *ngIf="editId !== data.id! || editCol != 'addressCounty'; else editAddressCountyTpl">
-              <div class="editable-cell-value-wrap" (click)="startEdit(data.id!, 'addressCounty', $event)">
-                {{ data.addressCounty }}
+            @if (editId !== data.id! || editCol != 'addressCounty') {
+              
+              <div class="editable-cell" >
+                <div class="editable-cell-value-wrap" (click)="startEdit(data.id!, 'addressCounty', $event)">
+                  {{ data.addressCounty }}
+                </div>
               </div>
-            </div>
-            <ng-template #editAddressCountyTpl>
+            }
+            @else {
+              
               <input type="text" nz-input [(ngModel)]="data.addressCounty" (blur)="changeSupplier(data)" />
-            </ng-template>
+            } 
           </td>
           <td>
-            <div class="editable-cell" *ngIf="editId !== data.id! || editCol != 'addressCity'; else editAddressCityTpl">
-              <div class="editable-cell-value-wrap" (click)="startEdit(data.id!, 'addressCity', $event)">
-                {{ data.addressCity }}
+            @if (editId !== data.id! || editCol != 'addressCity') {
+              
+              <div class="editable-cell" >
+                <div class="editable-cell-value-wrap" (click)="startEdit(data.id!, 'addressCity', $event)">
+                  {{ data.addressCity }}
+                </div>
               </div>
-            </div>
-            <ng-template #editAddressCityTpl>
+            }
+            @else {
+              
               <input type="text" nz-input [(ngModel)]="data.addressCity" (blur)="changeSupplier(data)" />
-            </ng-template>
+            } 
           </td>
           <td>
-            <div class="editable-cell"
-              *ngIf="editId !== data.id! || editCol != 'addressStreet'; else editAddressStreetTpl">
-              <div class="editable-cell-value-wrap" (click)="startEdit(data.id!, 'addressDistrict', $event)">
-                {{ data.addressDistrict }}
+            @if (editId !== data.id! || editCol != 'addressStreet') {
+              
+              <div class="editable-cell" >
+                <div class="editable-cell-value-wrap" (click)="startEdit(data.id!, 'addressDistrict', $event)">
+                  {{ data.addressDistrict }}
+                </div>
               </div>
-            </div>
-            <ng-template #editAddressStreetTpl>
+            }
+            @else {
+              
               <input type="text" nz-input [(ngModel)]="data.addressDistrict" (blur)="changeSupplier(data)" />
-            </ng-template>
+            } 
           </td>
           <td  nzEllipsis>
-            <div class="editable-cell" *ngIf="editId !== data.id! || editCol != 'addressLine1'; else editAddressLine1Tpl">
-              <div class="editable-cell-value-wrap" (click)="startEdit(data.id!, 'addressLine1', $event)">
-                <a>
-                  <span nz-tooltip nzTooltipTitle="{{ data.addressLine1 }}">{{ data.addressLine1 }}</span>
-                  </a> 
+            @if (editId !== data.id! || editCol != 'addressLine1') {
+              
+              <div class="editable-cell"  >
+                <div class="editable-cell-value-wrap" (click)="startEdit(data.id!, 'addressLine1', $event)">
+                  <a>
+                    <span nz-tooltip nzTooltipTitle="{{ data.addressLine1 }}">{{ data.addressLine1 }}</span>
+                    </a> 
+                </div>
               </div>
-            </div>
-            <ng-template #editAddressLine1Tpl>
+            }
+            @else {
+              
               <input type="text" nz-input [(ngModel)]="data.addressLine1" (blur)="changeSupplier(data)" />
-            </ng-template>
+            } 
           </td>
           <td nzEllipsis>
-            <div class="editable-cell" *ngIf="editId !== data.id! || editCol != 'addressLine2'; else editAddressLine2Tpl">
-              <div class="editable-cell-value-wrap" (click)="startEdit(data.id!, 'addressLine2', $event)">
-                <a>
-                  <span nz-tooltip nzTooltipTitle="{{ data.addressLine2 }}">{{ data.addressLine2 }}</span>
-                  </a> 
+            @if (editId !== data.id! || editCol != 'addressLine2') {
+              
+              <div class="editable-cell" >
+                <div class="editable-cell-value-wrap" (click)="startEdit(data.id!, 'addressLine2', $event)">
+                  <a>
+                    <span nz-tooltip nzTooltipTitle="{{ data.addressLine2 }}">{{ data.addressLine2 }}</span>
+                    </a> 
+                </div>
               </div>
-            </div>
-            <ng-template #editAddressLine2Tpl>
+            }
+            @else {
+              
               <input type="text" nz-input [(ngModel)]="data.addressLine2" (blur)="changeSupplier(data)" />
-            </ng-template>
+            } 
           </td>
           <td>
-            <div class="editable-cell"
-              *ngIf="editId !== data.id! || editCol != 'addressPostcode'; else editAddressPostcodeTpl">
-              <div class="editable-cell-value-wrap" (click)="startEdit(data.id!, 'addressPostcode', $event)">
-                {{ data.addressPostcode }}
+            @if (editId !== data.id! || editCol != 'addressPostcode') {
+
+              <div class="editable-cell" >
+                <div class="editable-cell-value-wrap" (click)="startEdit(data.id!, 'addressPostcode', $event)">
+                  {{ data.addressPostcode }}
+                </div>
               </div>
-            </div>
-            <ng-template #editAddressPostcodeTpl>
+            }
+            @else {
               <input type="text" nz-input [(ngModel)]="data.addressPostcode" (blur)="changeSupplier(data)" />
-            </ng-template>
+              
+            } 
           </td>
         </tr>
       }
@@ -195,16 +221,22 @@
 </nz-spin>
 
 <ng-template #tableFoot>
-  <div nz-row nzType="flex" nzJustify="start" *ngIf="searchResult != ''">
-    {{searchResult}}
-  </div>
-  
-  <div nz-row nzType="flex" nzJustify="start" *ngIf="!displayOnly"> 
-    <a nz-button nzType="primary" routerLink="/common/supplier-maintenance" routerLinkActive="active"
-      (click)="clearSessionSupplier()">
-      {{'add' | i18n}}
-    </a>
+  @if(searchResult != '') {
 
-    <button nz-button nzDanger (click)="removeSelectedSuppliers()">{{'delete' | i18n}}</button>
-  </div>
+    <div nz-row nzType="flex" nzJustify="start" >
+      {{searchResult}}
+    </div>
+  }
+  
+  @if(!displayOnly) {
+
+    <div nz-row nzType="flex" nzJustify="start" > 
+      <a nz-button nzType="primary" routerLink="/common/supplier-maintenance" routerLinkActive="active"
+        (click)="clearSessionSupplier()">
+        {{'add' | i18n}}
+      </a>
+  
+      <button nz-button nzDanger (click)="removeSelectedSuppliers()">{{'delete' | i18n}}</button>
+    </div>
+  }
 </ng-template>
