--- a/src/app/routes/common/supplier-address-maintenance/supplier-address-maintenance.component.html
+++ b/src/app/routes/common/supplier-address-maintenance/supplier-address-maintenance.component.html
@@ -54,6 +54,7 @@
                   nz-input 
                   class="input"
                   type="text" 
+                  style="width: 500px"
                   ngx-gp-autocomplete
                   (onAddressChange)="handleNewSupplierAddressChange($event)" />
           </nz-form-control>
