--- a/src/app/routes/inventory/dryrun-inventory-allocation/dryrun-inventory-allocation.component.html
+++ b/src/app/routes/inventory/dryrun-inventory-allocation/dryrun-inventory-allocation.component.html
@@ -58,9 +58,12 @@
       
     <ng-template #tableFoot>
 
-        <div nz-row nzType="flex" nzJustify="start" *ngIf="searchResult != ''">
-        {{searchResult}}
+      @if(searchResult != '') {
+
+        <div nz-row nzType="flex" nzJustify="start">
+          {{searchResult}}
         </div>
+      }
         
     </ng-template>
 </div>
