--- a/src/app/routes/inventory/location-utilization-snapshot/location-utilization-snapshot.component.html
+++ b/src/app/routes/inventory/location-utilization-snapshot/location-utilization-snapshot.component.html
@@ -97,9 +97,12 @@
             </nz-tabset>
           </ng-template>
     </st>
-    <div nz-row nzType="flex" nzJustify="start"  style="padding: 15px;" *ngIf="searchResult != ''">
-      {{searchResult}}
-    </div>
+    @if(searchResult != '') {
+  
+      <div nz-row nzType="flex" nzJustify="start">
+        {{searchResult}}
+      </div>
+    }
     
     <div nz-row nzType="flex" nzJustify="start" style="padding: 15px;" *ngIf="!displayOnly"> 
         <button nz-button nzType="primary" (click)="generateLocationUtilizationSnapshotBatch()">
