--- a/src/app/routes/warehouse-layout/pick-zone/pick-zone.component.html
+++ b/src/app/routes/warehouse-layout/pick-zone/pick-zone.component.html
@@ -63,9 +63,12 @@
 
 <ng-template #tableFoot>
 
-    <div nz-row nzType="flex" nzJustify="start" *ngIf="searchResult != ''">
+  @if(searchResult != '') {
+
+    <div nz-row nzType="flex" nzJustify="start">
       {{searchResult}}
     </div>
+  }
     
     <div nz-row nzType="flex" nzJustify="start" style="padding: 15px;">
       
