--- a/src/app/routes/work-order/produce-transaction/produce-transaction.component.html
+++ b/src/app/routes/work-order/produce-transaction/produce-transaction.component.html
@@ -94,8 +94,11 @@
   
 <ng-template #tableFoot>
 
-    <div nz-row nzType="flex" nzJustify="start" *ngIf="searchResult != ''">
+  @if(searchResult != '') {
+
+    <div nz-row nzType="flex" nzJustify="start">
       {{searchResult}}
     </div>
+  }
     
   </ng-template>
