--- a/src/app/routes/billing/billable-activity-type-maintenance/billable-activity-type-maintenance.component.html
+++ b/src/app/routes/billing/billable-activity-type-maintenance/billable-activity-type-maintenance.component.html
@@ -26,65 +26,94 @@
     </nz-steps>
 
     <!-- Let the user input the order information -->
-    <div class="small-card" *ngIf="stepIndex === 0 " style="padding-top: 20px;">
-        <div nz-row [nzGutter]="24">
-            <div nz-col [nzSpan]="8">
-              <nz-form-item>
-                <nz-form-label [nzSpan]="6">
-                  {{ 'name' | i18n }}
-                </nz-form-label>
-                <nz-form-control [nzSpan]="18" nzHasFeedback [nzErrorTip]="nameErrorTpl" [nzValidateStatus]="nameValidateStatus"
-                >
-                  <input   type="text" nz-input [(ngModel)]="currentBillableActivityType!.name" required 
-                    (blur)="nameChange($event)"  />
-                  <ng-template #nameErrorTpl let-control>  
-                      <ng-container *ngIf="nameValidateStatus === 'required'">{{ 'error.form.field.required' | i18n }}</ng-container>
-                      <ng-container *ngIf="nameErrorCode === 'numberExists'">name already exists</ng-container>
-                              
-                  </ng-template>
-                </nz-form-control>
-              </nz-form-item>
-            </div>
-        
-            <div nz-col [nzSpan]="16">
-                <nz-form-item>
-                    
-                    <nz-form-label [nzSpan]="8">
-                        {{ 'description' | i18n }}
-                    </nz-form-label>
-                    <nz-form-control [nzSpan]="16">
-                        <input   type="text" nz-input [(ngModel)]="currentBillableActivityType!.description"  >
-                    </nz-form-control>
-                </nz-form-item>
-            </div>
-        </div>        
-    </div> 
-    <!-- Let the user confirm the result -->
-    <div class="small-card" *ngIf="stepIndex === 1" style="padding-top: 20px;">
+    
+    @if(stepIndex === 0) {
 
-        <nz-descriptions nzBordered>
-            <nz-descriptions-item nzTitle="{{ 'name' | i18n}}"> 
-                {{currentBillableActivityType!.name }}
-            </nz-descriptions-item> 
-            <nz-descriptions-item nzTitle="{{ 'description' | i18n}}"> 
-                {{currentBillableActivityType!.description }}
-            </nz-descriptions-item>  
-        </nz-descriptions> 
-    </div>
+        <div class="small-card"  style="padding-top: 20px;">
+            <div nz-row [nzGutter]="24">
+                <div nz-col [nzSpan]="8">
+                  <nz-form-item>
+                    <nz-form-label [nzSpan]="6">
+                      {{ 'name' | i18n }}
+                    </nz-form-label>
+                    <nz-form-control [nzSpan]="18" nzHasFeedback [nzErrorTip]="nameErrorTpl" 
+                        nzValidateStatus="{{ nameValidateStatus == 'success' ? 'success' : 
+                                       (nameValidateStatus == 'warning' ? 'warning' : 'error') }}"   >
+
+                      <input   type="text" nz-input [(ngModel)]="currentBillableActivityType!.name" required 
+                        (blur)="nameChange($event)"  />
+                      <ng-template #nameErrorTpl let-control>  
+                        
+                            @if(nameValidateStatus === 'required') {
+
+                                <ng-container  >{{ 'error.form.field.required' | i18n }}</ng-container>
+                            }
+                            @if(nameValidateStatus === 'numberExists') {
+
+                                <ng-container  >name already exists</ng-container>
+                            }
+                          
+                      </ng-template>
+                    </nz-form-control>
+                  </nz-form-item>
+                </div>
+            
+                <div nz-col [nzSpan]="16">
+                    <nz-form-item>
+                        
+                        <nz-form-label [nzSpan]="8">
+                            {{ 'description' | i18n }}
+                        </nz-form-label>
+                        <nz-form-control [nzSpan]="16">
+                            <input   type="text" nz-input [(ngModel)]="currentBillableActivityType!.description"  >
+                        </nz-form-control>
+                    </nz-form-item>
+                </div>
+            </div>        
+        </div> 
+    }
+    <!-- Let the user confirm the result -->
+    @if(stepIndex === 1) {
+
+        <div class="small-card"  style="padding-top: 20px;">
+
+            <nz-descriptions nzBordered>
+                <nz-descriptions-item nzTitle="{{ 'name' | i18n}}"> 
+                    {{currentBillableActivityType!.name }}
+                </nz-descriptions-item> 
+                <nz-descriptions-item nzTitle="{{ 'description' | i18n}}"> 
+                    {{currentBillableActivityType!.description }}
+                </nz-descriptions-item>  
+            </nz-descriptions> 
+        </div>
+    }
+
 
 
 
     <div class="steps-action" style="padding-top: 15px;">
-        <button nz-button nzType="default" (click)="previousStep()" *ngIf="stepIndex > 0">
-            <span>{{ 'steps.previous' | i18n }}</span>
-        </button> 
-        <button nz-button nzType="default" (click)="nextStep()" *ngIf="stepIndex < 1" [disabled]="this.currentBillableActivityType.name == ''">
-            <span>{{ 'steps.next' | i18n }}</span>
-        </button>
+        
+        @if(stepIndex > 0) {
+
+            <button nz-button nzType="default" (click)="previousStep()"  >
+                <span>{{ 'steps.previous' | i18n }}</span>
+            </button> 
+        }
+        @if(stepIndex < 1) {
+        
+            <button nz-button nzType="default" (click)="nextStep()"  [disabled]="this.currentBillableActivityType.name == ''">
+                <span>{{ 'steps.next' | i18n }}</span>
+            </button>
+        } 
         <nz-divider nzType="vertical"></nz-divider>
-        <button nz-button nzType="primary" (click)="confirm()" *ngIf="stepIndex === 1">
-            <span> {{ 'confirm' | i18n }}</span>
-        </button>
+        
+        @if(stepIndex === 1) {
+
+            <button nz-button nzType="primary" (click)="confirm()"  >
+                <span> {{ 'confirm' | i18n }}</span>
+            </button>
+        }
+
     </div>
 
 </nz-spin>
