--- a/src/app/routes/common/velocity/velocity.component.html
+++ b/src/app/routes/common/velocity/velocity.component.html
@@ -25,10 +25,13 @@
   </ng-template>
   
 <ng-template #tableFoot>
-    <div nz-row nzType="flex" nzJustify="start" *ngIf="searchResult != ''">
-        {{searchResult}}
-      </div>
-      
+      @if(searchResult != '') {
+
+        <div nz-row nzType="flex" nzJustify="start">
+          {{searchResult}}
+        </div>
+      }
+          
       <div nz-row nzType="flex" nzJustify="start" style="padding: 15px;" *ngIf="!displayOnly"> 
         <button nz-button nzType="primary" (click)="openAddVelocityModel(tplNewVelocityModalTitle, tplNewVelocityModalContent)">
           {{ 'add' | i18n }}
