--- a/src/app/routes/inbound/customer-return/customer-return.component.html
+++ b/src/app/routes/inbound/customer-return/customer-return.component.html
@@ -172,9 +172,14 @@
             </nz-tabset>
           </ng-template>
     </st>
-    <div nz-row nzType="flex" nzJustify="start"  style="padding: 15px;" *ngIf="searchResult != ''">
-      {{searchResult}}
-    </div>
+    
+    @if(searchResult != '') {
+
+      <div nz-row nzType="flex" nzJustify="start">
+        {{searchResult}}
+      </div>
+    }
+    
     
     <div nz-row nzType="flex" nzJustify="start" style="padding: 15px;" *ngIf="!displayOnly"> 
         <button nz-button nzType="primary" routerLink="/inbound/customer-return-order/maintenance" routerLinkActive="active">
