--- a/src/app/routes/inbound/inbound-receiving-configuration/inbound-receiving-configuration.component.html
+++ b/src/app/routes/inbound/inbound-receiving-configuration/inbound-receiving-configuration.component.html
@@ -86,9 +86,12 @@
         </nz-dropdown-menu>
       </ng-template>
     </st>
-    <div nz-row nzType="flex" nzJustify="start"  style="padding: 15px;" *ngIf="searchResult != ''">
-      {{searchResult}}
-    </div>
+    @if(searchResult != '') {
+  
+      <div nz-row nzType="flex" nzJustify="start">
+        {{searchResult}}
+      </div>
+    }
     
     <div nz-row nzType="flex" nzJustify="start" style="padding: 15px;" *ngIf="!displayOnly"> 
         <button nz-button nzType="primary" routerLink="/inbound/inbound-receiving-configuration/maintenance" routerLinkActive="active">
