--- a/src/app/routes/inbound/putaway-configuration/putaway-configuration.component.html
+++ b/src/app/routes/inbound/putaway-configuration/putaway-configuration.component.html
@@ -128,9 +128,12 @@
 
 
 <ng-template #tableFoot>
-  <div nz-row nzType="flex" nzJustify="start" *ngIf="searchResult != ''">
-    {{searchResult}}
-  </div>
+  @if(searchResult != '') {
+
+    <div nz-row nzType="flex" nzJustify="start">
+      {{searchResult}}
+    </div>
+  }
 </ng-template>
 
 <nz-drawer [nzClosable]="true" [nzVisible]="lookupDrawerVisible" nzPlacement="right"
