--- a/src/app/routes/integration/integration-data-item/integration-data-item.component.html
+++ b/src/app/routes/integration/integration-data-item/integration-data-item.component.html
@@ -230,9 +230,12 @@
 
 
 <ng-template #tableFoot>
-  <div nz-row nzType="flex" nzJustify="start" *ngIf="searchResult != ''">
-    {{searchResult}}
-  </div>
+  @if(searchResult != '') {
+
+    <div nz-row nzType="flex" nzJustify="start">
+      {{searchResult}}
+    </div>
+  }
 </ng-template>
 
 </nz-spin>
