--- a/src/app/routes/integration/integration-data-receipt-confirm/integration-data-receipt-confirm.component.html
+++ b/src/app/routes/integration/integration-data-receipt-confirm/integration-data-receipt-confirm.component.html
@@ -191,9 +191,12 @@
 </div>
 
 <ng-template #tableFoot>
-  <div nz-row nzType="flex" nzJustify="start" *ngIf="searchResult != ''">
-    {{searchResult}}
-  </div>
+  @if(searchResult != '') {
+
+    <div nz-row nzType="flex" nzJustify="start">
+      {{searchResult}}
+    </div>
+  }
 </ng-template>
 
 </nz-spin>
