--- a/src/app/routes/inventory/inventory-activity/inventory-activity.component.html
+++ b/src/app/routes/inventory/inventory-activity/inventory-activity.component.html
@@ -361,9 +361,12 @@
 
 <ng-template #tableFoot>
 
-  <div nz-row nzType="flex" nzJustify="start" *ngIf="searchResult != ''">
-    {{searchResult}}
-  </div>
+  @if(searchResult != '') {
+
+    <div nz-row nzType="flex" nzJustify="start">
+      {{searchResult}}
+    </div>
+  }
 </ng-template>
 
 
