--- a/src/app/routes/inventory/inventory-allocation-summary/inventory-allocation-summary.component.html
+++ b/src/app/routes/inventory/inventory-allocation-summary/inventory-allocation-summary.component.html
@@ -316,9 +316,12 @@
       </ng-template> 
     </st>
     
-  <div nz-row nzType="flex" nzJustify="start"  style="padding: 15px;" *ngIf="searchResult != ''">
-    {{searchResult}}
-  </div> 
+    @if(searchResult != '') {
+
+      <div nz-row nzType="flex" nzJustify="start">
+        {{searchResult}}
+      </div>
+    }
   </div>
 
 
