--- a/src/app/routes/inventory/inventory-snapshot/inventory-snapshot.component.html
+++ b/src/app/routes/inventory/inventory-snapshot/inventory-snapshot.component.html
@@ -127,7 +127,10 @@
 </nz-spin>
 <ng-template #tableFoot>
 
-  <div nz-row nzType="flex" nzJustify="start" *ngIf="searchResult != ''">
-    {{searchResult}}
-  </div>
+  @if(searchResult != '') {
+
+    <div nz-row nzType="flex" nzJustify="start">
+      {{searchResult}}
+    </div>
+  }
 </ng-template>
