--- a/src/app/routes/outbound/allocation-configuration/allocation-configuration.component.html
+++ b/src/app/routes/outbound/allocation-configuration/allocation-configuration.component.html
@@ -109,9 +109,12 @@
       </tr>
     </tbody>
   </nz-table>
-  <div nz-row nzType="flex" nzJustify="start"  style="padding: 15px;" *ngIf="searchResult != ''">
-    {{searchResult}}
-  </div>
+  @if(searchResult != '') {
+
+    <div nz-row nzType="flex" nzJustify="start">
+      {{searchResult}}
+    </div>
+  }
     <div nz-row nzType="flex" nzJustify="start" style="padding: 15px;" *ngIf="!displayOnly"> 
       <button nz-button nzType="primary" routerLink="/outbound/allocation-configuration/maintenance" routerLinkActive="active">
         {{ 'add' | i18n }}
