--- a/src/app/routes/outbound/load/load.component.html
+++ b/src/app/routes/outbound/load/load.component.html
@@ -770,9 +770,12 @@
            
       </st>
       
-    <div nz-row nzType="flex" nzJustify="start"  style="padding: 15px;" *ngIf="searchResult != ''">
-      {{searchResult}}
-    </div> 
+    @if(searchResult != '') {
+
+      <div nz-row nzType="flex" nzJustify="start">
+        {{searchResult}}
+      </div>
+    }
     <div nz-row nzType="flex" nzJustify="start" style="padding: 15px;" *ngIf="!displayOnly">   
       <button  nz-button nzType="primary" routerLink="/util/file-upload/loads" routerLinkActive="active"
       *ngIf="!userPermissionMap.has('file-upload') || userPermissionMap.get('file-upload')">
