--- a/src/app/routes/outbound/order-target-shipping-carton-label/order-target-shipping-carton-label.component.html
+++ b/src/app/routes/outbound/order-target-shipping-carton-label/order-target-shipping-carton-label.component.html
@@ -81,9 +81,12 @@
         </ng-template>
       </st>
 
-      <div nz-row nzType="flex" nzJustify="start"  style="padding: 15px;" *ngIf="searchResult != ''">
-        {{searchResult}}
-      </div>
+        @if(searchResult != '') {
+
+          <div nz-row nzType="flex" nzJustify="start">
+            {{searchResult}}
+          </div>
+        }
         <div nz-row nzType="flex" nzJustify="start" style="padding: 15px;"  > 
           <cwms-common-print-button style='padding-left: 20px;'
             (print)="printSelectedTargetShippingCartonLabel($event)"
