--- a/src/app/routes/outbound/pick-confirm-strategy/pick-confirm-strategy.component.html
+++ b/src/app/routes/outbound/pick-confirm-strategy/pick-confirm-strategy.component.html
@@ -72,9 +72,12 @@
   
     <ng-template #tableFoot>
 
-        <div nz-row nzType="flex" nzJustify="start" *ngIf="searchResult != ''">
-        {{searchResult}}
+      @if(searchResult != '') {
+
+        <div nz-row nzType="flex" nzJustify="start">
+          {{searchResult}}
         </div>
+      }
         
     </ng-template>
   </div>
