--- a/src/app/routes/outbound/shipment/shipment.component.html
+++ b/src/app/routes/outbound/shipment/shipment.component.html
@@ -360,9 +360,12 @@
 
 </nz-spin>
 <ng-template #tableFoot>
-  <div nz-row nzType="flex" nzJustify="start" *ngIf="searchResult != ''">
-    {{searchResult}}
-  </div>
+  @if(searchResult != '') {
+
+    <div nz-row nzType="flex" nzJustify="start">
+      {{searchResult}}
+    </div>
+  }
 </ng-template>
 
 <!-- Modal for unpick -->
