--- a/src/app/routes/outbound/stop/stop.component.html
+++ b/src/app/routes/outbound/stop/stop.component.html
@@ -124,16 +124,13 @@
            
       </st>
       
-    <div nz-row nzType="flex" nzJustify="start"  style="padding: 15px;" *ngIf="searchResult != ''">
-      {{searchResult}}
-    </div> 
+      @if(searchResult != '') {
+
+        <div nz-row nzType="flex" nzJustify="start">
+          {{searchResult}}
+        </div>
+      }
     </div> 
   </nz-spin>
-  
-  
-  <ng-template #tableFoot>
-    <div nz-row nzType="flex" nzJustify="start" *ngIf="searchResult != ''">
-      {{searchResult}}
-    </div>
-  </ng-template>
+   
   
