--- a/src/app/routes/outbound/wave/wave.component.html
+++ b/src/app/routes/outbound/wave/wave.component.html
@@ -472,9 +472,12 @@
 </div>
 </nz-spin>
 <ng-template #tableFoot>
-  <div nz-row nzType="flex" nzJustify="start" *ngIf="searchResult != ''">
-    {{searchResult}}
-  </div>
+  @if(searchResult != '') {
+
+    <div nz-row nzType="flex" nzJustify="start">
+      {{searchResult}}
+    </div>
+  }
 </ng-template>
 
 
