--- a/src/app/routes/qc/qc-inspection/qc-inspection.component.html
+++ b/src/app/routes/qc/qc-inspection/qc-inspection.component.html
@@ -276,9 +276,12 @@
           </ng-template>  
 
     </st>
-    <div nz-row nzType="flex" nzJustify="start"  style="padding: 15px;" *ngIf="searchResult != ''">
-      {{searchResult}}
-    </div> 
+    @if(searchResult != '') {
+  
+      <div nz-row nzType="flex" nzJustify="start">
+        {{searchResult}}
+      </div>
+    }
     
     <div nz-row nzType="flex" nzJustify="start" style="padding: 15px;" *ngIf="!displayOnly"> 
       <button nz-button nzType="primary" routerLink="/qc/qc-inspection-request/maintenance" routerLinkActive="active">
