--- a/src/app/routes/qc/qc-result/qc-result.component.html
+++ b/src/app/routes/qc/qc-result/qc-result.component.html
@@ -142,9 +142,11 @@
          </span>
       </ng-template>
     </st>
-    <div nz-row nzType="flex" nzJustify="start"  style="padding: 15px;" *ngIf="searchResult != ''">
-      {{searchResult}}
-    </div> 
-    
+    @if(searchResult != '') {
+  
+      <div nz-row nzType="flex" nzJustify="start">
+        {{searchResult}}
+      </div>
+    }
 </div>
 </nz-spin>
