--- a/src/app/routes/report/report-history/report-history.component.html
+++ b/src/app/routes/report/report-history/report-history.component.html
@@ -72,7 +72,10 @@
 </div>
 
 <ng-template #tableFoot>
-  <div nz-row nzType="flex" nzJustify="start" *ngIf="searchResult != ''">
-    {{searchResult}}
-  </div>
+  @if(searchResult != '') {
+
+    <div nz-row nzType="flex" nzJustify="start">
+      {{searchResult}}
+    </div>
+  }
 </ng-template>
