--- a/src/app/routes/report/report-printer-configuration/report-printer-configuration.component.html
+++ b/src/app/routes/report/report-printer-configuration/report-printer-configuration.component.html
@@ -85,7 +85,10 @@
     </div>
 </nz-spin>
 <ng-template #tableFoot>
-    <div nz-row nzType="flex" nzJustify="start" *ngIf="searchResult != ''">
+    @if(searchResult != '') {
+  
+      <div nz-row nzType="flex" nzJustify="start">
         {{searchResult}}
-    </div>
+      </div>
+    }
 </ng-template>
