--- a/src/app/routes/transportation/carrier/carrier.component.html
+++ b/src/app/routes/transportation/carrier/carrier.component.html
@@ -95,9 +95,12 @@
       </ng-template> 
     </st>
     
-  <div nz-row nzType="flex" nzJustify="start"  style="padding: 15px;" *ngIf="searchResult != ''">
-    {{searchResult}}
-  </div> 
+    @if(searchResult != '') {
+
+      <div nz-row nzType="flex" nzJustify="start">
+        {{searchResult}}
+      </div>
+    }
   <div nz-row nzType="flex" nzJustify="start" style="padding: 15px;" *ngIf="!displayOnly"> 
     <a nz-button nzType="primary" routerLink="/transportation/carrier-maintenance" routerLinkActive="active">
       {{'add' | i18n}}
