--- a/src/app/routes/util/custom-report/custom-report.component.html
+++ b/src/app/routes/util/custom-report/custom-report.component.html
@@ -69,10 +69,12 @@
 </nz-spin>
 <ng-template #tableFoot>
 
-  <div nz-row nzType="flex" nzJustify="start" *ngIf="searchResult != ''">
-    {{searchResult}}
-  </div>
-  
+  @if(searchResult != '') {
+
+    <div nz-row nzType="flex" nzJustify="start">
+      {{searchResult}}
+    </div>
+  }
   <div nz-row nzType="flex" nzJustify="start" style="padding: 15px;">
     
     <button nz-button nzType="primary" routerLink="/util/custom-report/maintenance" routerLinkActive="active" *ngIf="isCurrentUserSystemAdmin">
