--- a/src/app/routes/util/data-init/data-init.component.html
+++ b/src/app/routes/util/data-init/data-init.component.html
@@ -38,10 +38,12 @@
 </nz-spin>
 <ng-template #tableFoot>
 
-  <div nz-row nzType="flex" nzJustify="start" *ngIf="searchResult != ''">
-    {{searchResult}}
-  </div>
-  
+  @if(searchResult != '') {
+
+    <div nz-row nzType="flex" nzJustify="start">
+      {{searchResult}}
+    </div>
+  }
   <div nz-row nzType="flex" nzJustify="start" style="padding: 15px;" *ngIf="!displayOnly">
     
     <button nz-button nzType="primary" (click)="openRequestDataInitialModal(tplDataInitialRequestModalTitle, tplDataInitialRequestModalContent )">
