--- a/src/app/routes/util/menu/menu.component.html
+++ b/src/app/routes/util/menu/menu.component.html
@@ -61,9 +61,12 @@
           
     </st>
     
-  <div nz-row nzType="flex" nzJustify="start"  style="padding: 15px;" *ngIf="searchResult != ''">
-    {{searchResult}}
-  </div>
+    @if(searchResult != '') {
+
+      <div nz-row nzType="flex" nzJustify="start">
+        {{searchResult}}
+      </div>
+    }
     <div nz-row nzType="flex" nzJustify="start" style="padding: 15px;" *ngIf="!displayOnly"> 
       <button nz-button nzType="primary" routerLink="/util/company-menu" routerLinkActive="active">
         {{ 'company-menu' | i18n }}
