--- a/src/app/routes/util/system-controlled-number/system-controlled-number.component.html
+++ b/src/app/routes/util/system-controlled-number/system-controlled-number.component.html
@@ -43,10 +43,12 @@
 </nz-spin>
 <ng-template #tableFoot>
 
-  <div nz-row nzType="flex" nzJustify="start" *ngIf="searchResult != ''">
-    {{searchResult}}
-  </div>
-  
+  @if(searchResult != '') {
+
+    <div nz-row nzType="flex" nzJustify="start">
+      {{searchResult}}
+    </div>
+  }
   <div nz-row nzType="flex" nzJustify="start" style="padding: 15px;" *ngIf="!displayOnly">
     
     <button nz-button nzType="primary" routerLink="/util/system-controlled-number/maintenance" routerLinkActive="active">
