--- a/src/app/routes/work-order/bill-of-material/bill-of-material.component.html
+++ b/src/app/routes/work-order/bill-of-material/bill-of-material.component.html
@@ -206,9 +206,12 @@
 </div>
 
 <ng-template #tableFoot>
-  <div nz-row nzType="flex" nzJustify="start" *ngIf="searchResult != ''">
-    {{searchResult}}
-  </div>
+  @if(searchResult != '') {
+
+    <div nz-row nzType="flex" nzJustify="start">
+      {{searchResult}}
+    </div>
+  }
 </ng-template>
 
 
