--- a/src/app/routes/work-order/labor-activity/labor-activity.component.html
+++ b/src/app/routes/work-order/labor-activity/labor-activity.component.html
@@ -70,9 +70,11 @@
       
 
     </st>
-    <div nz-row nzType="flex" nzJustify="start"  style="padding: 15px;" *ngIf="searchResult != ''">
-      {{searchResult}}
-    </div> 
-    
+    @if(searchResult != '') {
+  
+      <div nz-row nzType="flex" nzJustify="start">
+        {{searchResult}}
+      </div>
+    }
 </div>
 </nz-spin>
