--- a/src/app/routes/work-order/labor/labor.component.html
+++ b/src/app/routes/work-order/labor/labor.component.html
@@ -85,9 +85,12 @@
       </ng-template>
 
     </st>
-    <div nz-row nzType="flex" nzJustify="start"  style="padding: 15px;" *ngIf="searchResult != ''">
-      {{searchResult}}
-    </div> 
+    @if(searchResult != '') {
+  
+      <div nz-row nzType="flex" nzJustify="start">
+        {{searchResult}}
+      </div>
+    }
     
 </div>
 </nz-spin>
