--- a/src/app/routes/work-order/production-line-monitor/production-line-monitor.component.html
+++ b/src/app/routes/work-order/production-line-monitor/production-line-monitor.component.html
@@ -79,9 +79,12 @@
        </ng-template>
     </st>
     
-    <div nz-row nzType="flex" nzJustify="start"  style="padding: 15px;" *ngIf="searchResult != ''">
-      {{searchResult}}
-    </div>
+    @if(searchResult != '') {
+
+      <div nz-row nzType="flex" nzJustify="start">
+        {{searchResult}}
+      </div>
+    }
     <div nz-row nzType="flex" nzJustify="start" style="padding: 15px;" *ngIf="!displayOnly"> 
       <button nz-button nzType="primary" routerLink="/work-order/production-line-monitor/maintenance" routerLinkActive="active">
         {{ 'add' | i18n }}
