--- a/src/app/routes/work-order/production-mold-count-history/production-mold-count-history.component.html
+++ b/src/app/routes/work-order/production-mold-count-history/production-mold-count-history.component.html
@@ -54,9 +54,12 @@
       
 
     </st>
-    <div nz-row nzType="flex" nzJustify="start"  style="padding: 15px;" *ngIf="searchResult != ''">
-      {{searchResult}}
-    </div> 
+    @if(searchResult != '') {
+  
+      <div nz-row nzType="flex" nzJustify="start">
+        {{searchResult}}
+      </div>
+    }
     
 </div>
 </nz-spin>
